# ICCT26-BACKEND

./: .env.example  .gitignore  .markdownlint.json  00_READ_ME_FIRST.txt  00_READ_ME_FIRST_DOCUMENTATION_INDEX.md  00_START_HERE.md  00_START_HERE_DEPLOYMENT_SUMMARY.md  422_ERROR_FIX_SUMMARY.md  ACTION_CHECKLIST.md  ACTION_SUMMARY.md  ADMIN_ENDPOINTS_FIX_COMPLETE.md  ALL_TESTS_PASS_READY_TO_DEPLOY.txt  API_DOCS.md  API_REFERENCE.md  API_TESTING_GUIDE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_CHANGES_SUMMARY.md  BACKEND_DOCUMENTATION.md  BACKEND_ENHANCEMENT_PLAN.md  BACKEND_FIX_COMPREHENSIVE.md  BACKEND_FIX_QUICK_REFERENCE.md  BACKEND_IMPLEMENTATION_CORRECTED.md  BACKEND_IMPLEMENTATION_STATUS.md  BACKEND_PRODUCTION_SUMMARY.md  BACKEND_TEST_REPORT.md  BASE64_COMPLETE.md  BASE64_DEPLOYMENT_SUMMARY.md  BASE64_FINAL_SUMMARY.md  BASE64_PADDING_AUTO_CORRECTION.md  BASE64_QUICK_START.md  BASE64_SANITIZATION_COMPLETE.md  BASE64_SANITIZATION_QUICKSTART.md  CHANGES_AND_IMPLEMENTATION_SUMMARY.txt  CLEANUP_COMPLETE_README.txt  CLOUDINARY_INTEGRATION_GUIDE.md  CLOUDINARY_QUICK_START.md  CLOUDINARY_STATUS.md  CLOUDINARY_SUMMARY.md  COMMIT_MESSAGE.md  COMPLETE_BACKEND_CHECK_REPORT.md  (+268 more)
app/: __init__.py  config.py  db_utils.py  schemas.py  schemas_multipart.py  schemas_schedule.py  schemas_team.py  services.py
config/: __init__.py  settings.py
docs/: BACKEND_CHECK_SESSION_SUMMARY.txt  BACKEND_FIX_COMPLETION_REPORT.txt  BACKEND_HARDENING_COMPLETE.md  CHURCH_TEAM_LIMIT.md  CLEANUP_SUMMARY.md  CLOUDINARY_SETUP.md  CORS_FIX_FINAL_SUMMARY.txt  CORS_QUICK_REFERENCE.txt  DELIVERY_COMPLETE.txt  (+38 more)
(+105 files in other folders)
