[project]
name = "icct26-backend"
version = "1.0.0"
description = "ICCT26 Cricket Tournament Backend API - Asynchronous team registration system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.108.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
testpaths = ["tests"]
